--- a/styles/home.css
+++ b/styles/home.css
@@ -396,7 +396,6 @@
   align-items: flex-start;
   padding: 6.4rem;
   gap: 2.4rem;
-  /* min-height: 200vh; Ensures enough height to scroll */
 }
 
 .testimonials .col-1 {
@@ -407,7 +406,7 @@
   gap: 2.4rem;
 
   position: sticky;
-  top: 6.4rem; /* Adjust based on your header height */
+  top: 6.4rem;
   height: fit-content;
 }
 
