--- a/styles/typography.css
+++ b/styles/typography.css
@@ -50,7 +50,8 @@ p {
   line-height: 2.8rem;
   color: var(--color-grey);
   
-  word-wrap: normal;
+  word-break: keep-all;
+  overflow-wrap: break-word;
   hyphens: none;
 }
 
