--- a/styles/home.css
+++ b/styles/home.css
@@ -80,6 +80,8 @@
     padding: 4.8rem 2.4rem;
 
     position: relative;
+
+    /* margin-top: 10rem; */
   }
 
   .hero h1 {
@@ -120,6 +122,8 @@
 (max-width: 1200px) {
   .hero {
     padding: 0 3.2rem;
+    
+    /* margin-top: 10rem; */
   }
 }
 
@@ -409,7 +413,7 @@
 @media (min-width: 1024px) {
   .testimonials .col-1 {
     position: sticky;
-    top: 12.8rem;
+    /* top: 12.8rem; */
     height: fit-content;
   }
 }
