--- a/styles/general.css
+++ b/styles/general.css
@@ -171,11 +171,19 @@ body {
   .page-title {
     padding: 3.2rem 2.4rem;
   }
+
+  .page-title h2 {
+    width: 100%;
+  }
 }
 
 @media (min-width: 701px) and
 (max-width: 1200px) {
   .page-title {
     padding: 3.2rem 3.2rem;
+  }
+
+  .page-title h2 {
+    width: 100%;
   }
 }
