--- a/styles/header.css
+++ b/styles/header.css
@@ -2,9 +2,9 @@
 
 header {
   background-color: var(--color-navbar);
-  backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px); /* Safari support */
-
+  
   position: fixed;
   z-index: 100;
   top: 0;
@@ -157,7 +157,6 @@ nav ul li .current-page .indicator {
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  color: inherit;
   transition: transform var(--transition-duration);
 }
 
@@ -176,7 +175,10 @@ nav ul li .icon {
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  fill: currentColor;
+}
+
+nav ul li .icon:hover {
+  color: var(--color-text);
 }
 
 #icon-sun,
@@ -250,17 +252,25 @@ and (max-width:700px) {
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px); /* Safari support */
 
-
     position: fixed;
     top: 100%;
     left: 0;
     width: 100%;
-    z-index: 101;
+    z-index: 110;
     padding: 0 40px 12px 0;
 
     transform: translateX(+100%);
     transition: all 0.3s ease-in-out;
   }
+
+  /* nav .pages::after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    background: inherit;
+    filter: blur(10px);
+    z-index: -1;
+  } */
 
   nav ul {
     flex-direction: column;
