--- a/styles/buttons.css
+++ b/styles/buttons.css
@@ -148,34 +148,35 @@ button svg {
   background-color: var(--color-primary);
 }
 
-/* .icon-btn {
+.icon-btn {
   position: relative;
 
-  width: fit-content;
-  height: 6.4rem;
-  padding: 0px 1em;
+  width: 3.2rem;
+  height: 3.2rem;
 
   display: flex;
   align-items: center;
-  gap: 1.2rem;
+  justify-content: center;
 
   background-color: var(--color-bg);
   color: var(--color-text);
   font-family: var(--font-sans);
-  font-size: 1.6rem;
-  line-height: 2.8rem;
-  font-weight: 500;
-  text-align: center;
 
   transition: var(--transition);
 
   border: .0625em solid #ffffff33;
-  border-radius: 1em;
+  border-radius: 50%;
+}
+
+.icon-btn svg {
+  width: 2.4rem;
+  height: 2.4rem;
+  color: var(--color-text);
 }
 
 .icon-btn:hover {
   background-color: var(--color-primary);
-} */
+}
 
 @media (min-width: 320px) and
 (max-width: 700px) {
