--- a/styles/contact.css
+++ b/styles/contact.css
@@ -137,8 +137,8 @@
 }
 
 .contact-form button .spinner {
-  width: 1em;
-  height: 1em;
+  width: 2rem;
+  height: 2rem;
   border: 2px solid var(--color-text);
   border-top: 2px solid transparent;
   border-radius: 50%;
