--- a/styles/typography.css
+++ b/styles/typography.css
@@ -47,8 +47,8 @@ h4 {
 h5 {
   font-family: var(--font-sans);
   font-weight: 500;
-  font-size: 2.0rem;
-  line-height: 3.2rem;
+  font-size: clamp(1.4rem, 5vw, 2rem);
+  line-height: clamp(2.4rem, 6.7vw, 3.2rem);
   color: var(--color-text);
   
   word-wrap: normal;
