--- a/styles/home.css
+++ b/styles/home.css
@@ -70,7 +70,7 @@
   position: absolute;
   right: -6.4rem;
   bottom: 0;
-  width: 32.7rem;
+  width: 43.8rem;
   max-width: 100%;
 }
 
@@ -78,6 +78,8 @@
 (max-width: 700px) {
   .hero {
     padding: 4.8rem 2.4rem;
+
+    max-height: 75dvh;
 
     position: relative;
 
@@ -316,8 +318,8 @@
 
 @media (min-width: 701px) and
 (max-width: 1200px) {
-  .hero {
-    padding: 0 3.2rem;
+  .about {
+    padding: 3.2rem 3.2rem;
   }
 }
 
