--- a/styles/about.css
+++ b/styles/about.css
@@ -1,3 +1,56 @@
+/* === PAGE TITLE SECTION === */
+.download-resume {
+  text-decoration: none;
+
+  position: relative;
+
+  width: fit-content;
+  height: 6.4rem;
+  padding: 0px 1em;
+
+  display: flex;
+  align-items: center;
+  gap: 1.2rem;
+
+  background-color: var(--color-bg);
+  color: var(--color-text);
+  font-family: var(--font-sans);
+  font-size: 1.6rem;
+  line-height: 2.8rem;
+  font-weight: 500;
+  text-align: center;
+
+  transition: var(--transition);
+
+  border: .0625em solid var(--color-button-border);
+  border-radius: 1em;
+}
+
+.download-resume svg {
+  display: flex;
+  width: 2.4rem;
+  height: 2.4rem;
+  
+  color: var(--color-text);
+}
+
+.download-resume:hover {
+  background-color: var(--color-primary);
+}
+
+@media (min-width: 320px) and
+(max-width: 700px) {
+  .download-resume {
+    height: 4.8rem;
+    gap: .8rem;
+    padding: .8rem 1.6rem;
+
+    font-size: 1.4rem;
+    line-height: 2rem;
+    border-radius: 1.2rem;
+  }
+}
+
 /* === IMAGE SECTION === */
 .image {
   display: flex;
@@ -124,17 +177,6 @@
   gap: 6.4rem;
 }
 
-.about .about-text {
-  display: flex;
-  flex-direction: column;
-  gap: 2.4rem;
-}
-
-.about-stats {
-  display: flex;
-  gap: 2.4rem;
-}
-
 @media (min-width: 320px) and
 (max-width: 700px) {
   .process {
@@ -250,6 +292,61 @@
 @media (min-width: 701px) and
 (max-width: 1200px) {
   .exp {
+    padding: 3.2rem 3.2rem;
+  }
+}
+
+/* === CLIENTS SECTION === */
+.clients {
+  display: flex;
+  padding: 6.4rem;
+  gap: 2.4rem;
+}
+
+.clients .col-1 {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 2.4rem;
+}
+
+.clients .col-2 {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 6.4rem;
+}
+
+@media (min-width: 320px) and
+(max-width: 700px) {
+  .clients {
+    padding: 3.2rem 2.4rem;
+    flex-direction: column;
+  }
+
+  .clients .col-1 {
+    flex: 1;
+    gap: 1.6rem;
+  }
+
+  .clients .col-2 {
+    flex: 1;
+    gap: 2.4rem;
+  }
+
+  .about .about-stats {
+    gap: 2.4rem;
+  }
+
+  .clients p {
+    font-size: 1.4rem;
+    line-height: 2.4rem;
+  }
+}
+
+@media (min-width: 701px) and
+(max-width: 1200px) {
+  .clients {
     padding: 3.2rem 3.2rem;
   }
 }
