--- a/styles/about.css
+++ b/styles/about.css
@@ -38,6 +38,61 @@
   background-color: var(--color-primary);
 }
 
+/* */
+.resume-modal {
+  position: fixed;
+  inset: 0;
+  background: rgba(0,0,0,0.4);
+  display: none;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+}
+
+.resume-modal.show {
+  display: flex;
+}
+
+.resume-content {
+  background: var(--color-bg2);
+  padding: 2rem;
+  border-radius: 1rem;
+  max-width: 90vw;
+  width: 100%;
+  max-height: 95vh;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  box-shadow: 0 0 30px rgba(0,0,0,0.5);
+  position: relative;
+}
+
+.resume-content iframe {
+  width: 100%;
+  height: 80vh;
+  border: none;
+  overflow-y: scroll;
+}
+
+@media (max-width: 768px) {
+  .resume-content {
+    max-height: 90vh;
+    padding: 1.5rem;
+  }
+
+  .resume-content iframe {
+    height: 60vh;
+  }
+}
+
+/* .close-modal {
+  align-self: flex-end;
+  font-size: 1.5rem;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+} */
+
 @media (min-width: 320px) and
 (max-width: 700px) {
   .download-resume {
