--- a/styles/404.css
+++ b/styles/404.css
@@ -1,19 +1,19 @@
-.page404 {
-  width: 100%;
-  max-height: calc(100dvh - 6.4rem);
 
+.page404 {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 4.8rem;
 
+  min-height: calc(100dvh - 6.4rem);
   padding: 6.4rem;
+  text-align: center;
+  gap: 4.8rem;
 }
 
 .page404 h1 {
-  font-size: 25.6rem;
-  line-height: 1.5em;
+  font-size: 19.6rem;
+  line-height: 1em;
   font-weight: 700;
 }
 
